--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -12,7 +12,7 @@
         <search></search>
         <div class="main-content-w" v-cloak>
             <!--  轮播  -->
-            <slide :slide-list="slideList" v-if="slideList&&slideList.length" model="rotation"></slide>
+            <slide :slide-list="slideList" model="rotation" v-if="slideList&&slideList.length"></slide>
             <!-- 导航 nav -->
             <ul class="nav mt13">
                 <li>
