--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -65,7 +65,7 @@
               </dl>
             </div>
             <div class="btns">
-              <button @click='addCart'>加入购物车</button>
+              <button @click='addCart(merchandise)'>加入购物车</button>
               <button @click="goApply()">直接申请</button>
             </div>
           </div>
